<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_chip"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/like"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/ic_heart"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/img_item"
        android:layout_width="135dp"
        android:layout_height="127dp"
        android:src="@drawable/pinarello"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/img_bike"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/name_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pinarello_bike"
        android:textSize="20sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/voltaire"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/img_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/name_item"
        app:layout_constraintStart_toStartOf="@id/name_item"
        app:layout_constraintEnd_toEndOf="@id/name_item">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dola"
            android:textSize="20sp"
            android:textColor="@color/yellow"
            android:fontFamily="@font/voltaire"/>

        <TextView
            android:id="@+id/cost_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost_bike"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/voltaire"
            android:layout_marginStart="4dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>