<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.ItemActivity">

    <ImageView
        android:id="@+id/img_item"
        android:layout_width="match_parent"
        android:layout_height="388dp"
        android:src="@drawable/pinarello"
        android:background="@drawable/bg_detail_item"
        android:contentDescription="@string/img_bike"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/name_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pinarello_bike"
        android:textSize="35sp"
        android:fontFamily="@font/voltaire"
        android:layout_marginTop="18dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_item"/>

    <TextView
        android:id="@+id/sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sale_text"
        android:textSize="25sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/voltaire"
        android:layout_marginTop="8dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_item"/>

    <TextView
        android:id="@+id/sale_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pinarello_cost"
        android:textSize="25sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/voltaire"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@id/sale"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_item"/>

    <TextView
        android:id="@+id/cost_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pinarello_cost"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:fontFamily="@font/voltaire"
        android:layout_marginTop="8dp"
        android:layout_marginStart="44dp"
        app:layout_constraintStart_toEndOf="@id/sale_cost"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_item"/>

    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_text"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:fontFamily="@font/voltaire"
        android:layout_marginTop="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sale"/>

    <TextView
        android:id="@+id/item_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_description"
        android:textSize="22sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/voltaire"
        android:layout_marginTop="31dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_text">

        <View
            android:id="@+id/like"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/ic_heart"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/add_text"
            android:textSize="27sp"
            android:background="@drawable/bg_button"
            app:backgroundTint="@null"
            android:fontFamily="@font/voltaire"
            android:layout_marginStart="32dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>